--- a/_review/sty/starter.sty
+++ b/_review/sty/starter.sty
@@ -866,6 +866,7 @@
 %\newcommand{\pagenumberstyle}{\thepage}                   % 例：「1」
 %\newcommand{\pagenumberstyle}{\itshape\bfseries\thepage}  % 太字、斜体
 \newcommand{\pagenumberstyle}{--\ \thepage\ --}            % 例：「-- 1 --」
+% \newcommand{\pagenumberstyle}{\mdseries --\ \thepage\ --}    % 普通太さ明示指定 「-- 1 --」
 % \newcommand{\pagenumberstyle}{\itshape --\ \thepage\ --} % 斜体
 
 %%% ページ番号をページフッタに表示（fancyhdr.styを使用）
