bundle から bundle installへ変更

--- a/_posts/2016-01-11-gem.md
+++ b/_posts/2016-01-11-gem.md
@@ -131,7 +131,7 @@ $ rails c
 
 公開されているRubyで書かれたプログラムにGemfileが添えられていたときにはbundle installコマンドを実行してからプログラムを実行してみましょう。多くの場合、ドキュメントにその旨が書かれていますが、暗黙の了解で省略されていることもあります。
 
-また、Gemfileを変更してbundleコマンドを実行すると、Gemfile.lockというファイルが作成されます。Gemfile.lockには、使われているGem名とそのバージョン情報が記録されています。Gemfile.lockは自動で作られるものなので、編集する必要はありません。ソースコードを保管するときは、GemfileとGemfile.lockの両方のファイルを保管してください。
+また、Gemfileを変更してbundle installコマンドを実行すると、Gemfile.lockというファイルが作成されます。Gemfile.lockには、使われているGem名とそのバージョン情報が記録されています。Gemfile.lockは自動で作られるものなので、編集する必要はありません。ソースコードを保管するときは、GemfileとGemfile.lockの両方のファイルを保管してください。
 
 2つのファイルの違いを例え話で説明すると、GemfileはGemをインストールするための発注書です。Gemfileに使いたいGem名を書いて、bundle installコマンドを実行すると、発注書に従ってGemがインストールされます。Gemfile.lockは納品書です。発注書にもとづいて実際にインストールされたGemとそのバージョン情報などが書かれています。
 
@@ -183,5 +183,5 @@ gem 'sqlite3', '~> 1.4'
 - Bundlerは複数のGemをかんたんに管理する仕組み
 - BundlerではGemfileという名前のファイルに使用するGemを書く
 - Gemfileを作成しbundle installコマンドを実行すると、Gem群がインストールされる
-- bundleコマンドを実行するとGemfileに加えてGemfile.lockファイルが生成されるので、両方をソース管理対象にする
+- bundle installコマンドを実行するとGemfileをもとにGemfile.lockファイルが生成されるので、両方をソース管理対象にする
 - Gemfileは発注書、Gemfile.lockは納品書に相当する
