フォントにない文字群を削除

--- a/_posts/2014-07-01-crud.md
+++ b/_posts/2014-07-01-crud.md
@@ -32,7 +32,7 @@ $ rails new books_app
       create
 ... （略）
    Done in 3.61s.
-Webpacker successfully installed 🎉 🍰
+Webpacker successfully installed
 ```
 
 次に、以下のコマンドを実行します（メッセージ中"in process 20280"、"20191012005727"、"0.xxxxs"などの数字は実行するごとに異なります）。
