目次で見せたい形で節階層を調整

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -482,7 +482,7 @@ $ rails g scaffold book title:string memo:text
 
 すでにあるbooksテーブルにstring型のauthorを加えて、ブラウザから入力できるようにしてみましょう。
 
-### booksテーブルにstring型のauthorを加える
+#### booksテーブルにstring型のauthorを加える
 
 ```bash
 rails g migration AddAuthorToBooks author:string
@@ -505,7 +505,7 @@ class AddAuthorToBooks < ActiveRecord::Migration[6.0]
 end
 ```
 
-### migrationからDBを作る
+#### migrationからDBを作る
 
 ```bash
 $ rails db:migrate
@@ -518,9 +518,7 @@ $ rails db:migrate
 == 20191217005831 AddAuthorToBooks: migrated (0.0033s) ========================
 ```
 
-### viewを修正
-
-#### フォームパーシャル
+#### フォームパーシャルビューファイルを修正
 
 `app/views/books/_form.html.erb`
 
@@ -548,7 +546,7 @@ $ rails db:migrate
 <% end %>
 ```
 
-#### 詳細表示画面
+#### 詳細表示画面のビューファイルを修正
 
 `app/views/books/show.html.erb`
 
@@ -574,7 +572,7 @@ $ rails db:migrate
 <%= link_to 'Back', books_path %>
 ```
 
-#### 一覧表示画面
+#### 一覧表示画面のビューファイルを修正
 
 `app/views/books/index.html.erb`
 
@@ -612,7 +610,7 @@ $ rails db:migrate
 <%= link_to 'New Book', new_book_path %>
 ```
 
-### controllerを修正
+#### controllerを修正
 
 StrongParametersにauthorを追加します。
 
@@ -629,7 +627,7 @@ class BooksController < ApplicationController
 end
 ```
 
-### 動作確認
+#### 動作確認
 
 rails serverを起動して動作を確認してみましょう。
 
