nodeバージョンが古いエラーが出るのでWSLでのインストール手順変更
Webpacker requires Node.js >= 8.16.0 and you are using 8.10.0
Please upgrade Node.js

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -158,8 +158,18 @@ $ sudo apt update
 $ sudo apt upgrade -y
 $ sudo apt install autoconf bison build-essential libssl1.0-dev
     libyaml-dev libreadline-dev zlib1g-dev libncurses5-dev libffi-dev
-    libgdbm-dev sqlite3 libsqlite3-dev nodejs-dev node-gyp npm -y
-$ sudo npm install --global yarn
+    libgdbm-dev sqlite3 libsqlite3-dev -y
+```
+
+つづいて、Railsを実行するのに必要なJavaScript環境をつくります。
+
+```console
+$ curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.2/install.sh | bash
+$ source ~/.bashrc
+$ nvm install --lts
+$ nvm use --lts
+$ nvm alias default lts/*
+$ npm install --global yarn
 ```
 
 つづいてrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。以下のコマンドを実行してください。
