Brush up nvm installing process

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -167,8 +167,8 @@ $ sudo apt install autoconf bison build-essential libssl1.0-dev
 $ curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.35.2/install.sh | bash
 $ source ~/.bashrc
 $ nvm install --lts
-$ nvm use --lts
 $ nvm alias default lts/*
+$ nvm use default
 $ npm install --global yarn
 ```
 
