--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -172,7 +172,7 @@ $ nvm use default
 $ npm install --global yarn
 ```
 
-つづいてrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。以下のコマンドを実行してください。
+次はrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。以下のコマンドを実行してください。
 
 ```console
 $ git clone https://github.com/rbenv/rbenv.git ~/.rbenv
