大扉のべこさん肩書きがコピペしたままだったのでデザインに変更

--- a/_review/sty/mytitlepage.sty
+++ b/_review/sty/mytitlepage.sty
@@ -109,7 +109,7 @@ https://igarashikuniaki.net\\
 
 群馬高専出身。現在はフリーランスでRailsアプリ開発や技術顧問、研修設計などに携わる。大学の非常勤講師、企業の新人研修、島根県Ruby合宿、Rails寺子屋、RailsGirlsなどで講師を務める。著書に『ゼロからわかるRuby超入門』、『RubyとRailsの学習ガイド』 ほか。\\
 
-  {\gtfamily\bfseries ■ イラスト: becolomochi}\\
+  {\gtfamily\bfseries ■ デザイン: becolomochi}\\
 
 べころもち工房\\
 twitter: becolomochi\\
