Writing URL for pdf

--- a/_posts/2016-02-17-postface.md
+++ b/_posts/2016-02-17-postface.md
@@ -55,13 +55,13 @@ Railsを学びはじめると、Webサービスにはたくさんの技術が使
 
 - Ruby on Rails ガイド
   - [https://railsguides.jp](https://railsguides.jp)
-  - [電子書籍版](https://tatsu-zine.com/books/railsguides)
+  - 電子書籍版 [https://tatsu-zine.com/books/railsguides](https://tatsu-zine.com/books/railsguides)
 
 Railsの各機能を網羅的に解説しているサイトです。Railsの機能の使い方が分からないときに最初にあたるサイトでもあります。調べ物で使うのも良いですが、一度通読しておくとどのような機能があるかを把握できてその後の進みが速いです。常に最新のRailsについての記述が書いてあるサイトでもあります。本書でも各章の最後に、その章の内容に該当するRailsガイドへのリンクを書いているのでぜひ読んでみてください。
 
 - Ruby on Rails チュートリアル
   - [https://railstutorial.jp](https://railstutorial.jp)
-  - [電子書籍版](https://tatsu-zine.com/books/railstutorial)
+  - 電子書籍版 [https://tatsu-zine.com/books/railstutorial](https://tatsu-zine.com/books/railstutorial)
 
 Railsアプリを作りながら学ぶWeb上の資料です。Railsを学ぶ初期の資料として定番のものです。実際にアプリを作りながら知識を深めたいという方へお勧めです。
 
