--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -80,7 +80,7 @@ end
 $ rails s
 ```
 
-先頭の$マークはターミナルを表す印です。入力する必要はありません。
+先頭の$マークはターミナルを表す印です。入力する必要はありません。入力するとエラーになるので気をつけてください。
 
 ### ターミナルの実行結果の書式例
 
