--- a/_review/sty/mytitlepage.sty
+++ b/_review/sty/mytitlepage.sty
@@ -101,6 +101,8 @@
 
 本書は2012年4月から始めた一橋大学での講義資料からはじまり、そのあと幾度かの改訂を経て、今回初めての印刷製本版となりました。当時はRuby1.9, Rails3.2という環境でしたので、現在のRuby2.7, Rails6.0までの道のりで、Rubyは8つ、Railsは7つのバージョンアップを重ねたことになります。8年前から同じ言語、同じフレームワークを使って仕事ができていることは本当にすごいことです。しかもそのフレームワークは今でもバージョンアップのたびに便利になっていることも驚異的です。RubyとRailsのおかげでたのしく暮らしています。全てのRubyistのみなさんへ感謝します。\\
 
+印刷製本版の組版にはRe:VIEW Starterを利用しています。カウプランさんには設定方法についていろいろと教えていただきました。良い感じに組版することができました。深く感謝します。\\
+
   {\gtfamily\bfseries ■ 著: 五十嵐邦明}\\
 
 ガーネットテック373株式会社\\
