Fix small problem

--- a/_posts/2014-04-01-preface.md
+++ b/_posts/2014-04-01-preface.md
@@ -129,7 +129,7 @@ $ /usr/bin/ruby -e "$(curl -fsSL
   https://raw.githubusercontent.com/Homebrew/install/master/install)"
 ```
 
-Homebrewを使ってrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。なおmacOS Catalinaからデフォルトのshellがbashからzshに変更されています。 `echo $SHELL` を実行した結果が `bin/bash` のようにbashであれば以下の通りで良いのですが、結果が `bin/zsh` のようにzshであるときは以下の `.bash_profile` を `.zshrc` に置き換えて実行してください。
+Homebrewを使ってrbenvをインストールします。rbenvはRubyをインストールして管理するための道具です。なおmacOS Catalinaからデフォルトのshellがbashからzshに変更されています。 `echo $SHELL` を実行した結果が `/bin/bash` のようにbashであれば以下の通りで良いのですが、結果が `/bin/zsh` のようにzshであるときは以下の `.bash_profile` を `.zshrc` に置き換えて実行してください。
 
 ```console
 $ brew update
