--- a/_review/sty/mytextsize.sty
+++ b/_review/sty/mytextsize.sty
@@ -35,7 +35,8 @@
 \setlength{\oddsidemargin}{\paperwidth}      % 紙の幅から
 \addtolength{\oddsidemargin}{-\textwidth}    % 本文の幅を引いて
 \setlength{\oddsidemargin}{.5\oddsidemargin} % 半分にする
-\addtolength{\oddsidemargin}{-\inv@mag in}   % （謎の呪文）
+%\addtolength{\oddsidemargin}{-\inv@mag in}   % （謎の呪文）
+\addtolength{\oddsidemargin}{-1.2 in}   % （謎の呪文）
 \setlength{\evensidemargin}{\oddsidemargin}  % 偶数ページも同じ
 %% 奇数・偶数ページで余白幅を変える場合
 %% （ただし pbook (printing book) の場合だけ）
