カラーPDF調整

--- a/_review/sty/mytextsize.sty
+++ b/_review/sty/mytextsize.sty
@@ -29,14 +29,13 @@
 %%
 
 %% 本文の幅を設定
-\setlength{\textwidth}{44zw}  % 全角44文字
+\setlength{\textwidth}{40zw}  % 全角40文字
 \setlength{\fullwidth}{\textwidth}  % ヘッダの幅を本文と同じにする
 %% 左右の余白幅を設定
 \setlength{\oddsidemargin}{\paperwidth}      % 紙の幅から
 \addtolength{\oddsidemargin}{-\textwidth}    % 本文の幅を引いて
 \setlength{\oddsidemargin}{.5\oddsidemargin} % 半分にする
-%\addtolength{\oddsidemargin}{-\inv@mag in}   % （謎の呪文）
-\addtolength{\oddsidemargin}{-1.2 in}   % （謎の呪文）
+\addtolength{\oddsidemargin}{-\inv@mag in}   % （謎の呪文）
 \setlength{\evensidemargin}{\oddsidemargin}  % 偶数ページも同じ
 %% 奇数・偶数ページで余白幅を変える場合
 %% （ただし pbook (printing book) の場合だけ）
