Update Chapter3 for Rails7.0

--- a/_posts/2014-09-01-model.md
+++ b/_posts/2014-09-01-model.md
@@ -10,6 +10,8 @@ date: '2014-09-01'
 categories:
 ---
 
+TODO: indexアクションで出てきた「モデルオブジェクト」について、必要なら伏線改修する。
+
 # モデル
 
 この章ではデータの長期保存と、その際に使うモデルについて説明します。
