Update others for Rails7.0

--- a/_review/sty/mytitlepage.sty
+++ b/_review/sty/mytitlepage.sty
@@ -64,7 +64,7 @@
       \par             % 段落を区切る（デザイン崩れを防ぐため）
       ガーネットテック373株式会社
       \par             % 段落を区切る（デザイン崩れを防ぐため）
-      2020年2月29日
+      2022年1月22日
       \par             % 段落を区切る（デザイン崩れを防ぐため）
     }
   \fi
@@ -99,6 +99,8 @@
 
   {\gtfamily\bfseries ■ 技術書典8 まえがき}\\
 
+TODO: 変更
+
 本書は2012年4月から始めた一橋大学での講義資料からはじまり、そのあと幾度かの改訂を経て、今回初めての印刷製本版となりました。当時はRuby1.9, Rails3.2という環境でしたので、現在のRuby2.7, Rails6.0までの道のりで、Rubyは8つ、Railsは7つのバージョンアップを重ねたことになります。8年前から同じ言語、同じフレームワークを使って仕事ができていることは本当にすごいことです。しかもそのフレームワークは今でもバージョンアップのたびに便利になっていることも驚異的です。RubyとRailsのおかげでたのしく暮らしています。全てのRubyistのみなさんへ感謝します。\\
 
 印刷製本版の組版にはRe:VIEW Starterを利用しています。カウプランさんには設定方法についていろいろと教えていただきました。良い感じに組版することができました。深く感謝します。\\
@@ -112,6 +114,9 @@ https://igarashikuniaki.net\\
 群馬高専出身。現在はフリーランスでRailsアプリ開発や技術顧問、研修設計などに携わる。大学の非常勤講師、企業の新人研修、島根県Ruby合宿、Rails寺子屋、RailsGirlsなどで講師を務める。著書に『ゼロからわかるRuby超入門』、『RubyとRailsの学習ガイド』 ほか。\\
 
   {\gtfamily\bfseries ■ デザイン: becolomochi}\\
+
+
+TODO: 巻末へ移動
 
 べころもち工房\\
 twitter: becolomochi\\
